2007-07-16  Jonathan Graehl  <graehl@isi.edu>

	* src/carmel.cc (CARMEL_VERSION): 3.3

2007-07-12  Jonathan Graehl  <graehl@isi.edu>

	* src/carmel.cc: -+ 0: mean-field with alpha=0 (normalization: exp(digamma(alpha+w_i))/exp(digamma(alpha+sum w_j))

2007-06-20  Jonathan Graehl  <graehl@isi.edu>

	* fixed bugs (thanks, valgrind) all over: reading transducers with
	locked arcs, -a (tied arc preserving, for training) composition,
	-m (meaningful state names). decipherment (-a composition followed
	by training) works again.

2005-07-08  Jonathan Graehl  <graehl@isi.edu>

	* src/wfstio.cc: I changed nothing about the output of transducers (keeping the new e^ default instead of "ln"), but carmel now can properly identify e^-n weights in the presence of omitted input or output symbols.  Also, the following formats are now accepted:

(source dest weight)  (epsilon i/o)
(source dest input weight) (fsa)
(source dest input output weight) (fst)

and also variants like:

(source (dest weight) (dest input weight) (dest weight) (dest () (weight) (input weight)))

although I'm not sure what the use is of such flexibility ;)


2005-07-06  Jonathan Graehl  <graehl@isi.edu>

	* src/wfstio.cc: revamped wfst-reading code to handle ambiguity in
	optional input/output symbol and weights in e^-1.3 form.  also
	show error context when bad input is detected.

2005-03-29  Jonathan Graehl  <graehl@isi.edu>

	* src/carmel.cc: 

2004-09-23  Jonathan Graehl  <graehl@isi.edu>

	* ../shared/ChangeLog SEE ALSO (split source files into
	carmel-specific vs. general)
	
2004-08-27  Jonathan Graehl  <graehl@isi.edu>

	* src/fst.cc: changed kbest interface to visitor vs. returning
	list of paths; included wfstio.cc and compose.cc since they'll
	never be used without fst.cc (and to reduce the number of
	compilation units due to a GNU Make bug with long eval lines

	* Makefile: merged build system for tree transducer and Carmel
	toolkits (../shared/graehl.mk)

2004-07-16  Jonathan Graehl  <graehl@isi.edu>